<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life Tracker KLS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">Add List</string>
    <string name="about">About</string>
    <string name="about_dialog">Life Tracker was designed to help make keeping track of all of the things one has to do in their busy life easier. An easy-to-use interface packed with helpful features means that one never needs to worry about forgetting again!</string>
    <string name="new_list_message">Please enter a name for your list</string>
    <string name="no_lists">There are currently no lists</string>
    <string name="lists">Lists</string>
    <string name="edit_list">Edit List</string>
    <string name="delete_list">Delete List</string>
    <string name="delete_list_certainty">Are you sure you would like to delete this list?</string>
    <string name="edit_list_message">Please enter a new name for your Llist</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="new_item_message">Please enter a name for your new Item</string>
    <string name="items">Items</string>
    <string name="no_items">There are currently no items</string>
    <string name="edit_item_message">Please enter a new name for your item</string>
    <string name="delete_item_certainty">Are you sure you would like to delete this item?</string>
    <string name="attribute_description_colon">Description:</string>
    <string name="attribute_price_colon">Price:</string>
    <string name="attribute_quantity_colon">Quantity:</string>
    <string name="attribute_location_colon">Location:</string>
    <string name="attribute_weblink_colon">Web-Link:</string>
    <string name="attribute_priority">Priority</string>
    <string name="attribute_reminder">Reminder</string>
    <string name="attribute_image">Image</string>
    <string name="attribute_voice">Voice</string>
    <string name="edit">Edit</string>
    <string name="attribute_description">Description</string>
    <string name="attribute_price">Price</string>
    <string name="attribute_quantity">Quantity</string>
    <string name="attribute_location">Location</string>
    <string name="attribute_weblink">WebLink</string>
    <string name="not_applicable">N/A</string>
    <string name="blank"> </string>
    <string name="priority_message">Please choose the priority of this item:</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="reminder_message">Please set the reminder for this item:</string>
    <string name="notification_title">A reminder you set is going off!!</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="done_recording">Done</string>
    <string name="record_voice">Record a Voice Message</string>

</resources>