<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_description"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/summaryDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_price"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/summaryPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_quantity"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/summaryQuantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_location"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/summaryLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_weblink"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/summaryWebLinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_priority"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/summaryPriorityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_reminder"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/summaryReminderTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/summaryReminderDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_applicable"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_image"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/summaryImageButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@android:drawable/ic_menu_camera"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attribute_voice"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/summaryVoiceButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@android:drawable/ic_btn_speak_now"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</ScrollView>